rajout fichier bliss.R, correction pb sous windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,9 +30,14 @@ export(sim_correlated_functions)
 export(sim_functions)
 export(sim_multiple)
 export(support_estimation)
+import(Rcpp)
+import(RcppArmadillo)
 importFrom(MASS,bandwidth.nrd)
 importFrom(MASS,kde2d)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(Rcpp,Rcpp.plugin.maker)
+importFrom(Rcpp,cppFunction)
+importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
@@ -70,3 +75,4 @@ importFrom(utils,data)
 importFrom(utils,str)
 importFrom(utils,tail)
 useDynLib(bliss)
+useDynLib(bliss, .registration = TRUE)
