--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author: Paul-Marie Grollemund [aut, cre],
   Isabelle Sanchez [ctr]
   Meïli Baragatti [ctr]
 Maintainer: Paul-Marie Grollemund <paul-marie.grollemund@umontpellier.fr>
-Description: A method for the Bayesian Functional Linear Regression model (functions-on-scalar),
+Description: A method for the Bayesian Functional Linear Regression model (scalar-on-function),
   including two estimators of the coefficient function and an estimator of its support.
   A representation of the posterior distribution is also available.
 License: GPL-3
