big changes PMG

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ export(change_grid)
 export(choose_beta)
 export(compute_beta_posterior_density)
 export(compute_beta_sample)
+export(compute_chains_info)
+export(compute_random_walk)
+export(compute_starting_point)
 export(corr_matrix)
 export(diagnostics)
 export(dposterior)
@@ -22,7 +25,6 @@ export(pexp_grid)
 export(plot_bliss)
 export(plot_diagnostics)
 export(printbliss)
-export(random_walk)
 export(sigmoid)
 export(sigmoid_sharp)
 export(sim)
