--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,7 @@ Depends: R (>= 3.3.0)
 LinkingTo: Rcpp, RcppArmadillo
 Encoding: UTF-8
 LazyData: TRUE
-Imports: Rcpp, RcppArmadillo, MASS, RColorBrewer, ggplot2, rockchalk
+Imports: Rcpp, MASS, RColorBrewer, ggplot2, rockchalk
 Suggests: rmarkdown, knitr
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
-SystemRequirements: GNU make
