--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(sim)
 export(sim_x)
 export(support_estimation)
 import(Rcpp)
+import(RcppArmadillo)
 importFrom(MASS,bandwidth.nrd)
 importFrom(MASS,kde2d)
 importFrom(Rcpp,Rcpp.plugin.maker)
