--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Depends: R (>= 3.3.0)
 LinkingTo: Rcpp, RcppArmadillo
 Encoding: UTF-8
 LazyData: TRUE
-Imports: Rcpp, RcppArmadillo, MASS, rockchalk
+Imports: Rcpp, MASS, rockchalk
 Suggests: rmarkdown, knitr, RColorBrewer
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
