--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,9 +29,9 @@ export(sim)
 export(sim_x)
 export(support_estimation)
 import(Rcpp)
-import(RcppArmadillo)
 importFrom(MASS,bandwidth.nrd)
 importFrom(MASS,kde2d)
+importFrom(MASS,mvrnorm)
 importFrom(Rcpp,Rcpp.plugin.maker)
 importFrom(Rcpp,cppFunction)
 importFrom(Rcpp,evalCpp)
@@ -46,7 +46,6 @@ importFrom(graphics,matplot)
 importFrom(graphics,plot)
 importFrom(graphics,segments)
 importFrom(graphics,text)
-importFrom(rockchalk,mvrnorm)
 importFrom(stats,cor)
 importFrom(stats,median)
 importFrom(stats,pexp)
